# Med-Bench-Arena

./: .gitignore  DATASETS.md  LICENSE  MODELS.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
configs/: catalog_cn_tcm.yaml  catalog_en_med.yaml  catalog_ethics_safety.yaml  catalog_mcq.yaml  catalog_med_models.yaml  catalog_multimodal.yaml  example_agentclinic.yaml  example_api_backends.yaml  example_medagentbench.yaml  example_medbench_submit.yaml  example_open_safety.yaml  example_prompt_formats.yaml  example_smoke.yaml  example_tcm.yaml  example_tcm_ladder.yaml  example_tcm_struct.yaml
data/calibration/: calibration_report.json  calibration_report.md  healthbench_meta_gold.jsonl  healthbench_meta_strongmodel_labels.jsonl
data/kg/: tcm_classics_kg.graphml  tcm_classics_kg.json  tcm_classics_kg.ttl
data/samples/: demo_open_qa.jsonl  demo_safety.jsonl  demo_sdt.json  demo_tcm_struct.jsonl  (+1 more)
medeval/: __init__.py  assets.py  calibrate.py  cli.py  compare.py  distributed.py  eligibility.py  preflight.py  runner.py  schema.py  stats.py  submit.py
notebooks/: Med_Bench_Arena_Colab.ipynb
scripts/: prep_equitymedqa.py
tests/: test_adapters.py  test_calibrate.py  test_compare.py  test_distributed.py  test_eligibility.py  test_kg.py  test_medagentbench.py  test_mediq_assets.py  test_metrics.py  test_multimodal.py  test_preflight.py  test_prompt_audit_fixes.py  test_prompt_formats.py  test_run_manifest_and_cache.py  test_schedulers.py  test_smoke.py  test_stats.py  test_submit.py
(+25 files in other folders)
